# infineac

./: .buildinfo  .gitignore  README.md  README.rst  detailed_description.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tox.ini  user_guide.html
.github/workflows/: docs_pages.yml
R-files/: preprocess.R
_autosummary/: infineac.compare_results.aggregate_results.html  infineac.compare_results.calculate_similarity.html  infineac.compare_results.create_compare_df.html  infineac.compare_results.create_empty_count_df.html  infineac.compare_results.get_strategy_list.html  infineac.compare_results.html  infineac.compare_results.update_count.html  infineac.constants.html  infineac.file_loader.add_info_to_event.html  infineac.file_loader.create_blank_event.html  infineac.file_loader.extract_info_from_earnings_call_body.html  infineac.file_loader.extract_info_from_earnings_call_part.html  infineac.file_loader.extract_info_from_earnings_call_structured.html  infineac.file_loader.get_participants_position.html  infineac.file_loader.html  infineac.file_loader.load_files_from_xml.html  infineac.file_loader.participants_list_collapsed.html  infineac.file_loader.participants_string_to_list.html  infineac.file_loader.structure_earnings_call.html  infineac.file_loader.transform_unlisted_participants.html  infineac.helper.add_context_integers.html  infineac.helper.fill_list.html  infineac.helper.fill_list_from_mapping.html  infineac.helper.html  infineac.helper.jaccard_similarity.html  infineac.helper.jaccard_similarity_lists.html  infineac.helper.jaccard_similarity_pairwise.html  infineac.helper.load_data.html  infineac.helper.save_data.html  infineac.html  infineac.pipeline.html  infineac.pipeline.pipeline.html  infineac.process_event.check_if_keyword_align_qa.html  infineac.process_event.check_keywords_in_event.html  infineac.process_event.corpus_list_to_dataframe.html  infineac.process_event.create_participants_to_remove.html  infineac.process_event.create_samples.html  infineac.process_event.events_to_corpus.html  infineac.process_event.excluded_sentences_by_mod_words.html  infineac.process_event.extract_infos_from_events.html  (+34 more)
_modules/: index.html
_modules/infineac/: compare_results.html  file_loader.html  helper.html  pipeline.html  process_event.html  process_text.html  topic_extractor.html
_sources/: detailed_description.rst.txt  index.rst.txt
_sources/_autosummary/: infineac.compare_results.aggregate_results.rst.txt  infineac.compare_results.calculate_similarity.rst.txt  infineac.compare_results.create_compare_df.rst.txt  infineac.compare_results.create_empty_count_df.rst.txt  infineac.compare_results.get_strategy_list.rst.txt  infineac.compare_results.rst.txt  infineac.compare_results.update_count.rst.txt  infineac.constants.rst.txt  infineac.file_loader.add_info_to_event.rst.txt  infineac.file_loader.create_blank_event.rst.txt  infineac.file_loader.extract_info_from_earnings_call_body.rst.txt  infineac.file_loader.extract_info_from_earnings_call_part.rst.txt  infineac.file_loader.extract_info_from_earnings_call_structured.rst.txt  infineac.file_loader.get_participants_position.rst.txt  infineac.file_loader.load_files_from_xml.rst.txt  infineac.file_loader.participants_list_collapsed.rst.txt  infineac.file_loader.participants_string_to_list.rst.txt  infineac.file_loader.rst.txt  infineac.file_loader.structure_earnings_call.rst.txt  infineac.file_loader.transform_unlisted_participants.rst.txt  infineac.helper.add_context_integers.rst.txt  infineac.helper.fill_list.rst.txt  infineac.helper.fill_list_from_mapping.rst.txt  infineac.helper.jaccard_similarity.rst.txt  infineac.helper.jaccard_similarity_lists.rst.txt  infineac.helper.jaccard_similarity_pairwise.rst.txt  infineac.helper.load_data.rst.txt  infineac.helper.rst.txt  infineac.helper.save_data.rst.txt  infineac.pipeline.pipeline.rst.txt  infineac.pipeline.rst.txt  infineac.process_event.check_if_keyword_align_qa.rst.txt  infineac.process_event.check_keywords_in_event.rst.txt  infineac.process_event.corpus_list_to_dataframe.rst.txt  infineac.process_event.create_participants_to_remove.rst.txt  infineac.process_event.create_samples.rst.txt  infineac.process_event.events_to_corpus.rst.txt  infineac.process_event.excluded_sentences_by_mod_words.rst.txt  infineac.process_event.extract_infos_from_events.rst.txt  infineac.process_event.extract_passages_from_event.rst.txt  (+34 more)
doc_source/: index.rst  requirements.txt  user_guide.rst
docs/: conf.py  index.rst
docs_source/: conf.py  index.rst  infineac.rst  modules.rst
docs_source/_autosummary/: infineac.constants.rst  infineac.file_loader.rst  infineac.helper.rst  infineac.pipeline.rst  infineac.process_event.rst  infineac.process_text.rst  infineac.rst  infineac.topic_extractor.rst
infineac/: __init__.py  compare_results.py  constants.py  file_loader.py  helper.py  importing.py  pipeline.py  preprocess_string.py  process_event.py  process_text.py  topic_extractor.py
infineac_coref/: overview.ipynb
notebooks/: infineac.ipynb  infineac_server.ipynb  overview.ipynb
notebooks/Orbis Overview/: orbis_overview.html  orbis_overview.qmd
report/: Analysing Earnings Calls.tex
scripts/: create_corpus.py  extract_topics.py  load_save_data.py  load_save_transcripts.py
