[project]
name = "Infineac"
authors = [{ name = "Fabian Gabelberger", email = "falseazure@proton.me" }]
version = "0.1.1"
readme = "README.rst"
keywords = [
    "finance",
    "business intelligence",
    "fintech",
    "earnings call",
    "earnings call transcript",
    "earnings call analysis",
    "machine learning",
    "neural networks",
    "NLP",
    "deep learning",
]
description = "Infineac: Extracting Financial Insights from Earnings Calls using NLP"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy==1.23.5",
    "scipy==1.10.1",
    "pandas==2.0.3",
    "polars==0.19.13",
    "pyarrow==12.0.1", # for polars
    "seaborn==0.12.2",

    "torch==2.0.1",
    "transformers==4.30.2",
    "numba==0.57.1",

    "spacy==3.6.0",
    "stanza==1.5.0",
    "spacy-stanza==1.0.3",
    "bertopic==0.15.0",
    "rapidfuzz==3.1.1",
    "wordcloud==1.9.2",

    "lxml==4.9.3",
    "dill==0.3.6",
    "lz4==4.3.2",
    "XlsxWriter==3.1.5",
    "black==23.7.0",
    "flake8==6.0.0",
    "jupyterlab==4.0.2",

    "sphinx==7.1.2",
    "pydata-sphinx-theme==0.13.3",
    "sphinx-toolbox==3.5.0",
    "sphinx-pyproject==0.1.0",
    "sphinx-copybutton==0.5.2",

    # "tensorboard==2.12.1",
    # "wandb==0.15.5",
    # "spacy-experimental==0.6.3",
    # "sentence-transformers==2.2.2",
    # "flair==0.12.2",
]

[tool.sphinx-pyproject]
github_username = "falseazure"
github_repository = "infineac"
author = "Fabian Gabelberger"
project = "Infineac"
copyright = "Fabian Gabelberger"
language = "en"
package_root = "sphinx_pyproject"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.setuptools]
packages = ["infineac"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --showlocals"
testpaths = ["tests"]
